--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO</title>
+    <link rel='stylesheet' href="./css/todo.css">
 </head>
 <body>
-    
+    <div id="todo" class='container'>TODO
+        <!-- new task form -->
+        <div class="list">
+            <div class="item"></div>
+        </div>
+    </div>
+    <script src="./js/todo.js"></script>
 </body>
 </html>
