--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel='stylesheet' href="./css/todo.css">
 </head>
 <body>
-    <div id="todo" class='container'>TODO
-        <!-- new task form -->
-        <div class="list">
-            <div class="item"></div>
-        </div>
+    <div id="todo" class='container'>
+        
+        <form class='form' action="">
+            form
+        </form>
+        <div class="item">
+            <div class="status todo">todo</div>
+            <p class='description'>pasigaminti kavos</p>
+            <div class="deadline">2020-05-05 15:02</div>
+        </div> 
     </div>
     <script src="./js/todo.js"></script>
 </body>
