--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO</title>
-    <link rel='stylesheet' href="./css/todo.css">
+    <link rel="stylesheet" href="./css/todo.css">
 </head>
 <body>
-    <div id="todo" class='container'>
-        
-        <form class='form' action="">
-            form
+    <div id="todo" class="container">
+        <form class="form">
+            NEW TASK FORM
         </form>
-        <div class="item">
-            <div class="status todo">todo</div>
-            <p class='description'>pasigaminti kavos</p>
-            <div class="deadline">2020-05-05 15:02</div>
-        </div> 
     </div>
+    <div class="btn" data-number="1" data-color="red">Pirmas tekstas</div>
+    <div class="btn" data-number="2" data-color="blue">Antras visai kitoks...</div>
+    <div class="btn" data-number="3">Trecias</div>
+    <div class="btn" data-number="4">Ketvirtas</div>
+    <div class="btn" data-number="5">Penktas</div>
+    <div class="btn" data-number="6">Sestas</div>
+    <div class="btn" data-number="7">Septintas</div>
+    <div class="btn" data-number="8">Astuntas</div>
+
+    <script src="./js/events-for-loop.js"></script>
+    <script src="./js/data/todos.js"></script>
     <script src="./js/todo.js"></script>
 </body>
 </html>
