--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             NEW TASK FORM
         </form>
     </div>
-    <div class="btn" data-number="1" data-color="red">Pirmas tekstas</div>
+    <!-- <div class="btn" data-number="1" data-color="red">Pirmas tekstas</div>
     <div class="btn" data-number="2" data-color="blue">Antras visai kitoks...</div>
     <div class="btn" data-number="3">Trecias</div>
     <div class="btn" data-number="4">Ketvirtas</div>
     <div class="btn" data-number="5">Penktas</div>
     <div class="btn" data-number="6">Sestas</div>
     <div class="btn" data-number="7">Septintas</div>
-    <div class="btn" data-number="8">Astuntas</div>
+    <div class="btn" data-number="8">Astuntas</div> -->
 
-    <script src="./js/events-for-loop.js"></script>
+
     <script src="./js/data/todos.js"></script>
     <script src="./js/todo.js"></script>
 </body>
