--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="todo" class="container">
+        <div class="global-actions">
+            <div class="action remove">Remove All</div>
+        </div>
         <form class="form">
             NEW TASK FORM
         </form>
