--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 
 
     <script src="./js/data/todos.js"></script>
-    <script src="./js/todo.js"></script>
+    <script src="./js/todoSecondEdition.js"></script>
 </body>
 </html>
