--- a/index.html
+++ b/index.html
@@ -9,20 +9,30 @@
 <body>
     <div id="todo" class="container">
         <div class="global-actions">
-            <div class="action remove">Remove All</div>
+            <div class="action remove">Remove all</div>
         </div>
         <form class="form">
             <fieldset>
-                <label for='task'>Task</label>
-                <textarea name='task'></textarea>
+                <label for="task">Task</label>
+                <textarea name="task"></textarea>
+            </fieldset>
+            <fieldset class="status">
+                <label for="status">Status</label>
+                <div class="switch" data-selected="todo">
+                    <div class="option" data-option="todo">Todo</div>
+                    <div class="option" data-option="progress">In progress</div>
+                    <div class="option" data-option="done">Done</div>
+                </div>
             </fieldset>
             <fieldset>
-                <label for='deadline'>Deadline</label>
-                <input type='text' name="deadline">
+                <label for="deadline">Deadline</label>
+                <input type="text" name="deadline" placeholder="YYYY-MM-DD HH-MM">
             </fieldset>
             <div class="actions">
                 <div class="btn add">Add new</div>
                 <div class="btn clear">Clear form</div>
+                <div class="btn save">Save</div>
+                <div class="btn cancel">Cancel</div>
             </div>
         </form>
     </div>
@@ -36,7 +46,7 @@
     <div class="btn" data-number="8">Astuntas</div> -->
 
 
-    <script src="./js/data/todos.js"></script>
+    <!-- <script src="./js/data/todos.js"></script> -->
     <script src="./js/todoSecondEdition.js"></script>
 </body>
 </html>
